force-app/main/default/objects/JournalEntrySettings__c/JournalEntrySettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Journal Entry Settings</label>
</CustomObject>