force-app/main/default/objects/JournalEntrySettings__c/fields/Line1130__c.field-meta.xml
<CustomField>
    <fullName>Line1130__c</fullName>
    <defaultValue>15</defaultValue>
    <label>Line1130</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>