force-app/main/default/objects/JournalEntrySettings__c/fields/ManagerCommissionOnBO__c.field-meta.xml
<CustomField>
    <fullName>ManagerCommissionOnBO__c</fullName>
    <defaultValue>25</defaultValue>
    <label>ManagerCommissionOnBO</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>