force-app/main/default/objects/JournalEntrySettings__c/fields/ManagerCommissionOnRetail__c.field-meta.xml
<CustomField>
    <fullName>ManagerCommissionOnRetail__c</fullName>
    <defaultValue>25</defaultValue>
    <label>ManagerCommissionOnRetail</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>